--- a/frontend/src/components/Answer/Answer.module.css
+++ b/frontend/src/components/Answer/Answer.module.css
@@ -13,7 +13,7 @@
     font-family: "Segoe UI";
     font-style: normal;
     font-weight: 400;
-    font-size: 14px;
+    font-size: 14px !important;
     line-height: 20px;
     color: #323130;
     flex: none;
