--- a/frontend/src/components/QuestionInput/QuestionInput.module.css
+++ b/frontend/src/components/QuestionInput/QuestionInput.module.css
@@ -35,7 +35,7 @@
     width: 24px;
     height: 23px;
     background: none;
-    color: #424242;
+    color: #005a64;
 }
 
 .questionInputBottomBorder {
@@ -44,7 +44,7 @@
     height: 4px;
     left: 0%;
     bottom: 0%;
-    background: radial-gradient(106.04% 106.06% at 100.1% 90.19%,#0F6CBD 33.63%,#8DDDD8 100%);
+    background: radial-gradient(106.04% 106.06% at 100.1% 90.19%,#005a64 33.63%,#98bcc0 100%);
     border-bottom-left-radius: 8px;
     border-bottom-right-radius: 8px;
 }
