--- a/frontend/src/pages/chat/Chat.module.css
+++ b/frontend/src/pages/chat/Chat.module.css
@@ -59,7 +59,7 @@
     align-items: flex-end;
     text-align: center;
     letter-spacing: -0.01em;
-    color: #616161;
+    color: #FFFFFF;
 }
 
 .chatIcon {
