--- a/frontend/src/pages/layout/Layout.module.css
+++ b/frontend/src/pages/layout/Layout.module.css
@@ -36,7 +36,7 @@
     color: #005a64;
 }
 
-.headerTitle2 {
+.headerTitleRight {
     font-family: "Segoe UI";
     font-style: normal;
     font-weight: 600;
@@ -45,6 +45,8 @@
     width: 200px;
     margin-right: 36px;
     color: #FFFFFF;
+    margin-block-start: 0px;
+    margin-block-end: 0;
 }
 
 .headerIcon {
